--- a/ArPart_Three/Base.lproj/Main.storyboard
+++ b/ArPart_Three/Base.lproj/Main.storyboard
@@ -136,6 +136,70 @@
             </objects>
             <point key="canvasLocation" x="456.80000000000001" y="118.29085457271366"/>
         </scene>
+        <!--Draw LineVC-->
+        <scene sceneID="G5J-IB-1Sr">
+            <objects>
+                <viewController storyboardIdentifier="DrawLineVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="wkM-to-Qsq" customClass="DrawLineVC" customModule="ArPart_Three" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0ol-Js-E7g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F47-Rp-2Ot">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lTf-TU-qko">
+                                        <rect key="frame" x="8" y="17" width="44" height="30"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
+                                        <state key="normal" title="Back">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backBtn_Action:" destination="wkM-to-Qsq" eventType="touchUpInside" id="LNz-lH-5XG"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.20392156859999999" green="0.61176470589999998" blue="0.72941176470000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="lTf-TU-qko" firstAttribute="top" secondItem="F47-Rp-2Ot" secondAttribute="top" constant="17" id="8Df-sU-KJV"/>
+                                    <constraint firstAttribute="bottom" secondItem="lTf-TU-qko" secondAttribute="bottom" constant="17" id="9eT-Ct-OCQ"/>
+                                    <constraint firstItem="lTf-TU-qko" firstAttribute="leading" secondItem="F47-Rp-2Ot" secondAttribute="leading" constant="8" id="iNY-tB-hMP"/>
+                                    <constraint firstAttribute="height" constant="64" id="psJ-d5-WF7"/>
+                                </constraints>
+                            </view>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YWn-Go-Njx">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </arscnView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHg-MH-a2O">
+                                <rect key="frame" x="169.5" y="617" width="36" height="30"/>
+                                <state key="normal" title="Draw"/>
+                                <connections>
+                                    <action selector="drawBtn_Action:" destination="wkM-to-Qsq" eventType="touchUpInside" id="yyO-dy-wkZ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YWn-Go-Njx" firstAttribute="leading" secondItem="9ZW-VP-ZA8" secondAttribute="leading" id="8I8-Fc-84n"/>
+                            <constraint firstItem="YWn-Go-Njx" firstAttribute="bottom" secondItem="9ZW-VP-ZA8" secondAttribute="bottom" id="BVU-y3-TJ7"/>
+                            <constraint firstItem="pHg-MH-a2O" firstAttribute="centerX" secondItem="0ol-Js-E7g" secondAttribute="centerX" id="ENL-lX-2Zt"/>
+                            <constraint firstItem="YWn-Go-Njx" firstAttribute="top" secondItem="F47-Rp-2Ot" secondAttribute="bottom" id="JhJ-wk-eQS"/>
+                            <constraint firstItem="9ZW-VP-ZA8" firstAttribute="trailing" secondItem="F47-Rp-2Ot" secondAttribute="trailing" id="Pwe-lX-imA"/>
+                            <constraint firstItem="9ZW-VP-ZA8" firstAttribute="bottom" secondItem="pHg-MH-a2O" secondAttribute="bottom" constant="20" id="Vrb-PW-WJZ"/>
+                            <constraint firstItem="F47-Rp-2Ot" firstAttribute="top" secondItem="0ol-Js-E7g" secondAttribute="top" id="Z7T-jA-kwp"/>
+                            <constraint firstItem="YWn-Go-Njx" firstAttribute="trailing" secondItem="9ZW-VP-ZA8" secondAttribute="trailing" id="rJc-v9-J3h"/>
+                            <constraint firstItem="F47-Rp-2Ot" firstAttribute="leading" secondItem="9ZW-VP-ZA8" secondAttribute="leading" id="t0u-3D-Y5m"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9ZW-VP-ZA8"/>
+                    </view>
+                    <connections>
+                        <outlet property="drawBtn" destination="pHg-MH-a2O" id="8B6-kP-R53"/>
+                        <outlet property="mySceneView" destination="YWn-Go-Njx" id="XNd-oY-CxM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nkf-Ae-RhM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="456.80000000000001" y="776.76161919040487"/>
+        </scene>
         <!--SolarVC-->
         <scene sceneID="mNZ-Ic-Urs">
             <objects>
